--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "👀 Requestor",
+  "name": "Requestor (Alpha 👀)",
   "id": "808681350250005154",
   "api": "1.0.0",
   "main": "code.js",
